2004-06-09 Ian Rutt
 * Added up/downscaling mask to netcdf IO, and removed redundent code
 * Added this to input2ncdf.f90
 * Changed allocatable arrays to pointers in input2ncdf.f90, as the Compaq compiler
   has problems passing arrays arguments with the allocatable attribute out of
   subroutines
 * Re-distributed initialisation code to avoid trying to calculate temperatures when
   the model has no information about them.

2004-06-09 Magnus Hagdorn
 * initialised pointers in glimmer_proj.f90 with NULL()
   (fixes bug)
	
2004-06-08 Ian Rutt
 * Merged netCDF_IO branch into main trunk - seems to work OK. 
   *** NB *** The new capability to mask out some parts of the domain
   was developed in parallel with the netCDF stuff, and hasn't yet
   been fully integrated into the netcdf structure. That's the next step -
   I thought it wise not to attempt too much at once!
 * The previous unmerged version of the HEAD is tagged as PRE_NETCDF_IO
 * Added informative comment to glimmer_thck.f90
	
2004-06-04 Magnus Hagdorn
 * made variable names case sensitive (g_land.glw, generate_ncvars.py)
 * split up user guide into individual sections
 * added netCDF and config file documentation
	
2004-06-03 Magnus Hagdorn
 * found some more unused filenames and removed out_stem with ncfile

2004-06-03 Magnus Hagdorn
 * removed unused filenames for namelists and structures
   usrffile, topgfile, relxfile, prcpfile, presusrffile, latifile

2004-06-03 Ian Rutt
 * Added dependency of f90_dep.mak on the Makefile and makefile.arc
 * Cancelled implicit rule that tries to make .o files out of .mod files
 using the MODULA-2 compiler (m2c), which sometimes causes build problems.

2004-06-01 Magnus Hagdorn
 * new documentation structure
	
2004-05-27 Ian Rutt
 * Fixed problems with polar stereographic projection and interpolation routines.

2004-05-25 Ian Rutt
 * Added comment to main glimmer subroutine

2004-05-24 Magnus Hagdorn