@@ -1,3 +1,7 @@
+2004-06-11 Ian Rutt
+ * Extended GMT projections code to allow the specification of a
+   standard parallel when using the polar stereographic projection
+
 2004-06-09 Ian Rutt
  * Added up/downscaling mask to netcdf IO, and removed redundent code
  * Added this to input2ncdf.f90
